[2단계 - 블랙잭] 초코칩(권기호) 미션 제출합니다. (#685)
* refactor: BlackjackInitializer 제거

* docs: 2차 요구사항 기능 목록 작성

* feat: 사용자 배팅 금액 입력 구현

* feat: 참가자 배팅 금액 구현

* feat: 최종 수익 출력 포멧 구현

* feat: 배팅 금액 구현

* feat:  블랙잭일 때 베팅 금액의 1.5 배 받는 기능 구현

* refactor: 객체에 역할 부여

* feat: 승리 시 배팅 금액의 2배 얻게 구현

* feat: 무승부 시, 배팅 금액 반환 구현

* feat: 배팅 금액 최소 구현

* refactor: inputView 개행 상수화

* docs: 피드백 요구사항 추가

* fix: 잘못된 딜러 수익 수정

* refactor: createPlayer의 메서드 제거

* refactor: PlayerProfit 클래스명 변경

* refactor: Judge 승패 계산만 하도록 역할 변경

* fix: 배팅 금액 입력 전에 이름 예외 던지게 수정

* refactor: 정적 팩터리 메서드 명명 규칙 수정

* refactor: Judge 객체로 변경

* refactor: 정적 팩터리 메서드명 변경

* refactor: Judge 클래스명 및 메서드명 수정

* fix: 정수 출력 시, 정수 부분만 출력

* refactor: 불필요 else 제거